--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '17'
+        java-version: 17
+        java-package: jdk
+        check-latest: false
     - name: Run with Java
-      run: |
-        javac Trial.java
-        java Trial
-     
-    
+      run:
+       javac Trial.java
+       java Trial
