Update main.yml , add distribution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
         java-version: 17
         java-package: jdk
         check-latest: false
+        distribution: 
+         jdk
+         jre
     - name: Run with Java
       run:
        javac Trial.java
