--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
         java-package: jdk
         check-latest: false
         distribution: 
-         jdk
-         jre
+         jdk+jre
     - name: Run with Java
       run:
        javac Trial.java
