Update main.yml with distribution adopt

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
         java-version: 17
         java-package: jdk
         check-latest: false
-        distribution: 
-         jre
+        distribution: adopt
     - name: Run with Java
       run:
        java Trial
